--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.27.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
